started game logic with player and current enemy

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/MKHLink/Just_Another_RPG#readme",
   "devDependencies": {
     "jest": "^29.1.2"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.4"
   }
 }
